feat: div color on hover added

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
     align-items: center;
     width: var(--cell-width);
     height: var(--cell-height);
+    background-color: var(--grid-color);
 }
 
 .outer {
