feat: clear grid

--- a/styles.css
+++ b/styles.css
@@ -3,16 +3,21 @@
 // Posted by Pztar
 // Retrieved 2025-12-09, License - CC BY-SA 3.0
 */
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content:  center;
+    align-items: center;
+    height: 100vh;
+}
+
+#btn-cont {
+    margin: 30px;
+    display: flex;
+    gap: 20px;
+}
 
 @media screen and (min-height: 750px) and (max-height: 800px){ 
-    body {
-        display: flex;
-        flex-direction: column;
-        justify-content:  center;
-        align-items: center;
-        height: 100vh;
-    }
-
     #container {
         flex-direction: column;
         border: 2px solid black;
@@ -26,7 +31,7 @@
         width: var(--cell-width);
         height: var(--cell-height);
         background-color: var(--grid-color);
-        border: 1px solid red;
+        border: 1px solid gray;
     }
 
     .outer {
