--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,15 @@ body {
     }
 }
 
-.footer-cont {
-    text-align: center;
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    gap: 5px;
+} 
+
+#footer-icon {
+    width: 16px; 
+    height: 16px;
 }
