--- a/styles.css
+++ b/styles.css
@@ -4,23 +4,29 @@
 // Retrieved 2025-12-09, License - CC BY-SA 3.0
 */
 body {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
+    margin: 0;
 }
 
 .main-cont {
     display: flex;
-    flex: 1;
     flex-direction: column;
-    justify-content:  center;
-    align-items: center; 
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    
 }
 
 #btn-cont {
-    margin: 30px;
     display: flex;
-    gap: 20px;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 @media screen and (min-height: 750px) and (max-height: 800px){ 
@@ -29,6 +35,7 @@ body {
         border: 2px solid black;
         width: var(--grid-width);
         height: var(--grid-height);
+        margin-bottom: 32px;
     }
 
     .inner {
@@ -57,7 +64,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
     gap: 5px;
 } 
 
